--- a/application/resources/ScheduleExaminationForm.fxml
+++ b/application/resources/ScheduleExaminationForm.fxml
@@ -6,50 +6,75 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label alignment="CENTER" layoutX="88.0" layoutY="27.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="250.0" text="Zakazivanje pregleda" textAlignment="CENTER" textFill="#af1010">
+      <Label alignment="CENTER" layoutX="75.0" layoutY="14.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="250.0" text="Zakazivanje pregleda" textAlignment="CENTER" textFill="#af1010">
          <font>
             <Font name="Franklin Gothic Medium" size="23.0" />
          </font>
       </Label>
-      <ImageView fitHeight="50.0" fitWidth="55.0" layoutX="25.0" layoutY="27.0">
+      <ImageView fitHeight="50.0" fitWidth="55.0" layoutX="15.0" layoutY="15.0">
          <image>
             <Image url="file:/D:/TEODORA/III/BP/PROJEKTNI%20ZADATAK/PawSpiracy/pictures/logo.jpg" />
          </image>
       </ImageView>
-      <Label layoutX="25.0" layoutY="115.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="75.0" text="Datum:" textFill="#1c3e74">
+      <Label layoutX="15.0" layoutY="85.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="75.0" text="Datum:" textFill="#1c3e74">
          <font>
             <Font name="Franklin Gothic Medium" size="19.0" />
          </font>
       </Label>
-      <DatePicker layoutX="125.0" layoutY="115.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="200.0" />
-      <Label layoutX="25.0" layoutY="175.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="75.0" text="Vrijeme:" textFill="#1c3e74">
+      <DatePicker fx:id="datePicker" layoutX="110.0" layoutY="85.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="200.0" />
+      <Label layoutX="15.0" layoutY="146.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="75.0" text="Vrijeme:" textFill="#1c3e74">
          <font>
             <Font name="Franklin Gothic Medium" size="19.0" />
          </font>
       </Label>
-      <ComboBox layoutX="125.0" layoutY="175.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="40.0" style="-fx-background-color: #f7f7f7;" />
-      <Label alignment="CENTER" layoutX="165.0" layoutY="175.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="10.0" text=":" textAlignment="CENTER">
+      <Label alignment="CENTER" layoutX="165.0" layoutY="146.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="10.0" text=":" textAlignment="CENTER">
          <font>
             <Font name="Franklin Gothic Medium" size="20.0" />
          </font>
       </Label>
-      <ComboBox layoutX="175.0" layoutY="175.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="40.0" style="-fx-background-color: #f7f7f7;" />
-      <Label layoutX="25.0" layoutY="235.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="75.0" text="Opis:" textFill="#1c3e74">
+      <Label layoutX="15.0" layoutY="204.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="75.0" text="Opis:" textFill="#1c3e74">
          <font>
             <Font name="Franklin Gothic Medium" size="19.0" />
          </font>
       </Label>
-      <TextField alignment="TOP_LEFT" layoutX="25.0" layoutY="285.0" prefHeight="120.0" prefWidth="650.0" style="-fx-background-color: #f7f7f7; -fx-border-color: #1c3e74;">
+      <TextField fx:id="descriptionField" alignment="TOP_LEFT" layoutX="15.0" layoutY="250.0" prefHeight="150.0" prefWidth="400.0" style="-fx-background-color: #f7f7f7; -fx-border-color: #1c3e74;">
          <font>
             <Font name="Arial" size="17.0" />
          </font>
       </TextField>
-      <Button layoutX="306.0" layoutY="431.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="99.0" style="-fx-background-color: #f7f7f7; -fx-background-radius: 10; -fx-border-color: #1c3e74; -fx-border-radius: 10; -fx-border-width: 2;" text="Zakaži" textFill="#1c3e74">
+      <Button layoutX="572.0" layoutY="426.0" mnemonicParsing="false" onAction="#submit" prefHeight="40.0" prefWidth="99.0" style="-fx-background-color: #f7f7f7; -fx-background-radius: 10; -fx-border-color: #1c3e74; -fx-border-radius: 10; -fx-border-width: 2;" text="Zakaži" textFill="#1c3e74">
          <font>
             <Font name="Franklin Gothic Medium" size="20.0" />
          </font>
       </Button>
+      <Label fx:id="bannerLabel" alignment="CENTER" layoutX="15.0" layoutY="427.0" prefHeight="40.0" prefWidth="400.0" text="Niste unijeli korektne podatke!" textAlignment="CENTER" textFill="#af1010" visible="false">
+         <font>
+            <Font name="Arial" size="17.0" />
+         </font>
+      </Label>
+      <TextField fx:id="hoursField" alignment="CENTER" layoutX="110.0" layoutY="146.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="55.0" promptText="12" style="-fx-background-color: #f7f7f7;">
+         <font>
+            <Font name="Arial" size="18.0" />
+         </font>
+      </TextField>
+      <TextField fx:id="minutesField" alignment="CENTER" layoutX="173.0" layoutY="146.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="55.0" promptText="00" style="-fx-background-color: #f7f7f7;">
+         <font>
+            <Font name="Arial" size="18.0" />
+         </font>
+      </TextField>
+      <TableView fx:id="petTable" layoutX="456.0" layoutY="124.0" prefHeight="275.0" prefWidth="330.0">
+        <columns>
+          <TableColumn fx:id="nameColumn" prefWidth="100.0" text="Ime" />
+          <TableColumn fx:id="genderColumn" prefWidth="100.0" text="Rod" />
+            <TableColumn fx:id="speciesColumn" prefWidth="129.0" text="Vrsta" />
+        </columns>
+      </TableView>
+      <TextArea fx:id="ownerField" layoutX="456.0" layoutY="28.0" prefHeight="75.0" prefWidth="330.0" wrapText="true">
+         <font>
+            <Font name="Arial" size="17.0" />
+         </font>
+      </TextArea>
    </children>
 </AnchorPane>
