--- a/application/resources/ExaminationDetailsForm.fxml
+++ b/application/resources/ExaminationDetailsForm.fxml
@@ -23,29 +23,29 @@
             <Font name="Franklin Gothic Medium" size="20.0" />
          </font>
       </Label>
-      <Label layoutX="50.0" layoutY="108.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="200.0" text="Opis i preporuke:" textFill="#1c3e74">
+      <Label layoutX="50.0" layoutY="97.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="200.0" text="Opis i preporuke:" textFill="#1c3e74">
          <font>
             <Font name="Franklin Gothic Medium" size="20.0" />
          </font>
       </Label>
-      <TextField fx:id="descriptionTextField" alignment="TOP_LEFT" layoutX="50.0" layoutY="160.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="120.0" prefWidth="850.0" style="-fx-border-color: #1c3e74; -fx-background-color: #f7f7f7; -fx-background-radius: 10; -fx-border-radius: 10;">
+      <TextField fx:id="descriptionTextField" alignment="TOP_LEFT" layoutX="50.0" layoutY="145.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="120.0" prefWidth="850.0" style="-fx-border-color: #1c3e74; -fx-background-color: #f7f7f7; -fx-background-radius: 10; -fx-border-radius: 10;">
          <font>
             <Font name="Arial" size="17.0" />
          </font>
       </TextField>
-      <Label layoutX="50.0" layoutY="300.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="75.0" text="Adresa:" textFill="#1c3e74">
+      <Label layoutX="50.0" layoutY="287.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="75.0" text="Adresa:" textFill="#1c3e74">
          <font>
             <Font name="Franklin Gothic Medium" size="20.0" />
          </font>
       </Label>
-      <ComboBox fx:id="addressComboBox" layoutX="350.0" layoutY="300.0" prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: #f7f7f7;" />
-      <Label layoutX="570.0" layoutY="300.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="75.0" text="Grad:" textFill="#1c3e74">
+      <ComboBox fx:id="addressComboBox" layoutX="351.0" layoutY="287.0" prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: #f7f7f7;" />
+      <Label layoutX="570.0" layoutY="287.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="75.0" text="Grad:" textFill="#1c3e74">
          <font>
             <Font name="Franklin Gothic Medium" size="20.0" />
          </font>
       </Label>
-      <ComboBox fx:id="cityComboBox" layoutX="660.0" layoutY="300.0" prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: #f7f7f7;" />
-      <TabPane fx:id="tabPane" layoutX="50.0" layoutY="360.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="700.0" style="-fx-background-color: white; -fx-border-color: grey;" tabClosingPolicy="UNAVAILABLE">
+      <ComboBox fx:id="cityComboBox" layoutX="660.0" layoutY="287.0" prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: #f7f7f7;" />
+      <TabPane fx:id="tabPane" layoutX="50.0" layoutY="340.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="330.0" prefWidth="700.0" style="-fx-background-color: white; -fx-border-color: grey;" tabClosingPolicy="UNAVAILABLE">
         <tabs>
           <Tab fx:id="servicesTab" style="-fx-font-family: Arial;" text="Izvršene usluge">
             <content>
@@ -54,8 +54,10 @@
                         <TableView fx:id="serviceTable" layoutX="-2.0" prefHeight="260.0" prefWidth="700.0">
                           <columns>
                             <TableColumn fx:id="IDServiceColumn" prefWidth="120.0" text="Identifikator" />
-                            <TableColumn fx:id="nameServiceColumn" prefWidth="458.0" text="Naziv" />
-                              <TableColumn fx:id="priceServiceColumn" prefWidth="119.0" text="Cijena" />
+                            <TableColumn fx:id="nameServiceColumn" prefWidth="250.0" text="Naziv" />
+                              <TableColumn fx:id="priceServiceColumn" prefWidth="120.0" text="Cijena usluge" />
+                              <TableColumn fx:id="quantityServiceColumn" prefWidth="100.0" text="Broj usluga" />
+                              <TableColumn fx:id="priceColumn" prefWidth="106.0" text="Cijena" />
                           </columns>
                         </TableView>
                      </children></AnchorPane>
@@ -68,10 +70,9 @@
                         <TableView fx:id="spentMedicineTable" prefHeight="260.0" prefWidth="700.0">
                           <columns>
                             <TableColumn fx:id="IDMedicineColumn" prefWidth="100.0" text="Identifikator" />
-                            <TableColumn fx:id="nameMedicineColumn" prefWidth="211.0" text="Naziv" />
-                              <TableColumn fx:id="typeMedicineColumn" prefWidth="101.0" text="Vrsta" />
-                              <TableColumn fx:id="manufacturerColumn" prefWidth="145.0" text="Proizvođač" />
-                              <TableColumn fx:id="spentQuantityColumn" prefWidth="141.0" text="Potrošena količina" />
+                            <TableColumn fx:id="nameMedicineColumn" prefWidth="244.0" text="Naziv" />
+                              <TableColumn fx:id="typeMedicineColumn" minWidth="0.0" prefWidth="201.0" text="Vrsta" />
+                              <TableColumn fx:id="spentQuantityColumn" prefWidth="150.0" text="Potrošena količina" />
                           </columns>
                         </TableView>
                      </children></AnchorPane>
@@ -84,12 +85,11 @@
                         <TableView fx:id="treatmentsTable" prefHeight="260.0" prefWidth="700.0">
                           <columns>
                             <TableColumn fx:id="IDTreatmentMedicineColumn" prefWidth="70.0" text="Lijek" />
-                            <TableColumn fx:id="nameTreatmentColumn" prefWidth="120.0" text="Naziv " />
-                              <TableColumn fx:id="doseTreatmentColumn" prefWidth="70.0" text="Doza" />
-                              <TableColumn fx:id="frequencyTreatmentColumn" prefWidth="100.0" text="Učestalost" />
-                              <TableColumn fx:id="startTreatmentColumn" prefWidth="130.0" text="Početak liječenja" />
-                              <TableColumn fx:id="durationTreatmentColumn" text="Trajanje" />
-                              <TableColumn fx:id="instructionsTreatmentColumn" prefWidth="129.0" text="Instrukcije" />
+                            <TableColumn fx:id="nameTreatmentColumn" prefWidth="146.0" text="Naziv " />
+                              <TableColumn fx:id="doseTreatmentColumn" prefWidth="100.0" text="Doza" />
+                              <TableColumn fx:id="frequencyTreatmentColumn" prefWidth="170.0" text="Učestalost" />
+                              <TableColumn fx:id="startTreatmentColumn" prefWidth="135.0" text="Početak liječenja" />
+                              <TableColumn fx:id="durationTreatmentColumn" prefWidth="74.0" text="Trajanje" />
                           </columns>
                         </TableView>
                      </children></AnchorPane>
@@ -97,22 +97,22 @@
             </Tab>
         </tabs>
       </TabPane>
-      <TextField fx:id="addressTextBox" layoutX="141.0" layoutY="300.0" prefHeight="40.0" prefWidth="200.0" promptText="Unesite adresu" style="-fx-background-color: #f7f7f7;">
+      <TextField fx:id="addressTextBox" layoutX="141.0" layoutY="287.0" prefHeight="40.0" prefWidth="200.0" promptText="Unesite adresu" style="-fx-background-color: #f7f7f7;">
          <font>
             <Font name="Calibri Light" size="18.0" />
          </font>
       </TextField>
-      <Button layoutX="775.0" layoutY="360.0" mnemonicParsing="false" onAction="#add" prefHeight="40.0" prefWidth="150.0" style="-fx-background-color: #f7f7f7; -fx-border-color: #af1010; -fx-background-radius: 15; -fx-border-radius: 15;" text="Dodaj" textFill="#1c3e74">
+      <Button layoutX="775.0" layoutY="340.0" mnemonicParsing="false" onAction="#add" prefHeight="40.0" prefWidth="150.0" style="-fx-background-color: #f7f7f7; -fx-border-color: #af1010; -fx-background-radius: 15; -fx-border-radius: 15;" text="Dodaj" textFill="#1c3e74">
          <font>
             <Font name="Franklin Gothic Medium" size="18.0" />
          </font>
       </Button>
-      <Button layoutX="775.0" layoutY="420.0" mnemonicParsing="false" onAction="#update" prefHeight="40.0" prefWidth="150.0" style="-fx-background-color: #f7f7f7; -fx-border-color: #af1010; -fx-background-radius: 15; -fx-border-radius: 15;" text="Izmijeni" textFill="#1c3e74">
+      <Button layoutX="775.0" layoutY="395.0" mnemonicParsing="false" onAction="#update" prefHeight="40.0" prefWidth="150.0" style="-fx-background-color: #f7f7f7; -fx-border-color: #af1010; -fx-background-radius: 15; -fx-border-radius: 15;" text="Izmijeni" textFill="#1c3e74">
          <font>
             <Font name="Franklin Gothic Medium" size="18.0" />
          </font>
       </Button>
-      <Button layoutX="775.0" layoutY="480.0" mnemonicParsing="false" onAction="#delete" prefHeight="40.0" prefWidth="150.0" style="-fx-background-color: #f7f7f7; -fx-border-color: #af1010; -fx-background-radius: 15; -fx-border-radius: 15;" text="Obriši" textFill="#1c3e74">
+      <Button layoutX="775.0" layoutY="450.0" mnemonicParsing="false" onAction="#delete" prefHeight="40.0" prefWidth="150.0" style="-fx-background-color: #f7f7f7; -fx-border-color: #af1010; -fx-background-radius: 15; -fx-border-radius: 15;" text="Obriši" textFill="#1c3e74">
          <font>
             <Font name="Franklin Gothic Medium" size="18.0" />
          </font>
@@ -122,17 +122,17 @@
             <Font name="Franklin Gothic Medium" size="20.0" />
          </font>
       </Label>
-      <Label fx:id="examinationIDLabel" alignment="CENTER" layoutX="159.0" layoutY="30.0" prefHeight="40.0" prefWidth="75.0" style="-fx-background-color: #f7f7f7;" text="1" textAlignment="CENTER" textFill="#af1010">
+      <Label fx:id="examinationIDLabel" alignment="CENTER" layoutX="159.0" layoutY="30.0" prefHeight="40.0" prefWidth="60.0" style="-fx-background-color: #f7f7f7;" text="1" textAlignment="CENTER" textFill="#af1010">
          <font>
-            <Font name="Franklin Gothic Medium" size="20.0" />
+            <Font name="Franklin Gothic Medium" size="18.0" />
          </font>
       </Label>
-      <Button layoutX="775.0" layoutY="555.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#viewMedicalRecord" prefHeight="40.0" prefWidth="150.0" style="-fx-background-color: #f7f7f7; -fx-border-color: #1c3e74; -fx-background-radius: 10; -fx-border-radius: 10; -fx-border-width: 2;" text="Medicinski zapis" textFill="#af1010">
+      <Button layoutX="775.0" layoutY="567.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#viewMedicalRecord" prefHeight="40.0" prefWidth="150.0" style="-fx-background-color: #f7f7f7; -fx-border-color: #1c3e74; -fx-background-radius: 10; -fx-border-radius: 10; -fx-border-width: 2;" text="Medicinski zapis" textFill="#af1010">
          <font>
             <Font name="Franklin Gothic Medium" size="17.0" />
          </font>
       </Button>
-      <Button layoutX="775.0" layoutY="620.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#finalizeExamination" prefHeight="40.0" prefWidth="150.0" style="-fx-background-color: #f7f7f7; -fx-border-color: #1c3e74; -fx-background-radius: 10; -fx-border-radius: 10; -fx-border-width: 2;" text="Završi" textAlignment="CENTER" textFill="#af1010">
+      <Button layoutX="775.0" layoutY="630.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#finalizeExamination" prefHeight="40.0" prefWidth="150.0" style="-fx-background-color: #f7f7f7; -fx-border-color: #1c3e74; -fx-background-radius: 10; -fx-border-radius: 10; -fx-border-width: 2;" text="Završi" textAlignment="CENTER" textFill="#af1010">
          <font>
             <Font name="Franklin Gothic Medium" size="20.0" />
          </font>
@@ -147,5 +147,10 @@
             <Font name="Arial" size="18.0" />
          </font>
       </TextField>
+      <Button fx:id="refreshButton" layoutX="775.0" layoutY="505.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="150.0" style="-fx-background-color: #f7f7f7; -fx-border-color: #af1010; -fx-background-radius: 15; -fx-border-radius: 15;" text="Osvježi" textFill="#1c3e74">
+         <font>
+            <Font name="Franklin Gothic Medium" size="18.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
